--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ color: #FFC000;
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="photos/songbird.jpg" alt="Creative Source Logo" class="img-fluid">
+        <img src="photos/songbird.JPG" alt="Creative Source Logo" class="img-fluid">
 
  <div class="container">
           <div class="carousel-caption text-start">
@@ -303,7 +303,7 @@ color: #FFC000;
         </div>
       </div>
       <div class="carousel-item">
-        <img src="photos/hghg.jpg" alt="Creative Source Logo" class="img-fluid">
+        <img src="photos/hghg.JPG" alt="Creative Source Logo" class="img-fluid">
 
         <div class="container">
           <div class="carousel-caption">
@@ -314,7 +314,7 @@ color: #FFC000;
         </div>
       </div>
       <div class="carousel-item">
-       <img src="photos/pfp.jpg" alt="Creative Source Logo" class="img-fluid">
+       <img src="photos/pfp.JPG" alt="Creative Source Logo" class="img-fluid">
 
         <div class="container">
           <div class="carousel-caption text-end">
